# kvkv

./: Makefile  README.md  pyproject.toml
app/: apps.py  models.py  urls.py  views.py
app/management/commands/: kvkv_create_user.py
app/migrations/: 0001_initial.py
app/templates/kvkv/: addpair.html.dtl  list.html.dtl
kvkv/: apps.py  urls.py  views.py
kvkv/management/commands/: create_admin_user.py
proj/: settings.py  urls.py
proj/manageapp/: apps.py
proj/manageapp/management/commands/: create_local_user.py
tests/: tests.py
