[tool.poetry]
name = "kvkv"
version = "0.1.0"
description = ""
authors = ["10sr <8.slashes@gmail.com>"]
packages = [
    { include = "proj" },
    { include = "kvkv" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
